# chip8_emulator

./: .gitignore  CMakeLists.txt
misc/: ops.txt
src/: CMakeLists.txt  chip8.cpp  chip8.h  cpu.cpp  cpu.h  disassembler.cpp  disassembler.h  main.cpp
